# sorting-selector

./: .gitignore
Implementation/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  cpp-sort-Target-release.cmake  cpp-sort-config.cmake  cpp-sort-release-armv8-data.cmake  cpp-sortTargets.cmake  heuristics.py  list_generators.py  test_sorters.py
Implementation/analysis/: benchmark.py  compare_sorts.ipynb  general_exploration.ipynb  probes_vs_sorts.ipynb  runtime_features.ipynb  test_sorters.py  train_model.ipynb  verify_running_time.ipynb
Implementation/data/: create_features_dataset.py  list_generators.py
Implementation/heuristics/: heuristics.py
Implementation/lib/: create_features_dataset.py  find_features.py  probes.pyi  runtime_features.py  sorters.pyi
Implementation/misc/: sorting_algorithms.py
Implementation/results/: check_model.ipynb
Implementation/src/: benchmark.cpp  benchmark.h  benchmark_pb.cpp  bindings.cpp  cppsort_module.cpp  main.cpp  probes_pb.cpp  sorters_pb.cpp
Implementation/test/: benchmark.py  general_exploration.ipynb  probes_experimentation.ipynb  probes_vs_sorts.ipynb  remove_redundant_probes.ipynb  remove_redundant_sorters.ipynb  runtime_features.ipynb  test_sorters.py  train_model.ipynb  verify_running_time.ipynb  verify_sorters.ipynb
Proposal/: proposal.aux  proposal.dvi  proposal.fdb_latexmk  proposal.fls  proposal.out.ps  proposal.tex  proposalv2.tex
Report/: report.tex
